--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,12 @@
 /* body reset */
-body {
+html, body, #root {
   margin: 0;
   padding: 0;
+  border: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden; /*  Disable scrollbars */
+  display: block;  /* No floating content on sides */
 }
 /* list reset */
 
@@ -46,6 +51,10 @@ body {
 
   .container {
     margin: 0 auto;
+  }
+
+  section.container {
+    padding-top: 20px;
   }
   
   .container > .about {   
